
vhddir = $(includedir)/vhd

vhd_HEADERS  = vhd.h
vhd_HEADERS += libvhd.h
vhd_HEADERS += libvhd-index.h
vhd_HEADERS += libvhd-journal.h
vhd_HEADERS += vhd-util.h
vhd_HEADERS += list.h

blktapdir = $(includedir)/blktap

blktap_HEADERS  = blktap2.h
blktap_HEADERS += blktaplib.h
blktap_HEADERS += blktap3.h
blktap_HEADERS += xen_blkif.h
blktap_HEADERS += tapdisk-message.h
blktap_HEADERS += tap-ctl.h
blktap_HEADERS += debug.h
blktap_HEADERS += util.h
blktap_HEADERS += payload.h
blktap_HEADERS += kpr_util.h

noinst_HEADERS  = blktap.h
noinst_HEADERS += compiler.h
